完善功能,报废流程

--- a/eam/view/view-ops/src/main/resources/public/business/ops/monitor_dashboard/monitor_dashboard_list.html
+++ b/eam/view/view-ops/src/main/resources/public/business/ops/monitor_dashboard/monitor_dashboard_list.html
@@ -197,7 +197,7 @@
                         </div>
                         <div class="layui-col-md6">
                             <div style="height:250px">
-                                <table class="pure-table" id="dataLoad" style="width:100%;text-align:left;">
+                                <table class="pure-table  pure-table-bordered"  id="dataLoad" style="width:100%;text-align:left;">
                                 </table>
                             </div>
                         </div>
@@ -209,13 +209,13 @@
                     <div class="layui-row layui-col-space10">
                         <div class="layui-col-md6">
                             <div style="height:250px">
-                                <table class="pure-table" id="dataMem" style="width:100%;text-align:left;">
+                                <table class="pure-table  pure-table-bordered" id="dataMem" style="width:100%;text-align:left;">
                                 </table>
                             </div>
                         </div>
                         <div class="layui-col-md6">
                             <div style="height:250px">
-                                <table class="pure-table" id="dataFs" style="width:100%;text-align:left;">
+                                <table class="pure-table  pure-table-bordered" id="dataFs" style="width:100%;text-align:left;">
                                 </table>
                             </div>
                         </div>
@@ -234,21 +234,20 @@
 </div>
 
 
-
-<div class="layui-fluid">
-    <div class="layui-row layui-col-space10">
-        <div class="layui-col-md12">
-            <div class="layui-card">
-                <div class="layui-card-header">
-                    数据采集报错统计
-                </div>
-                <div class="layui-card-body">
-                    <div id="assetCata" style="width:100%;height:300px"></div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
+<!--<div class="layui-fluid">-->
+<!--    <div class="layui-row layui-col-space10">-->
+<!--        <div class="layui-col-md12">-->
+<!--            <div class="layui-card">-->
+<!--                <div class="layui-card-header">-->
+<!--                    数据采集报错统计-->
+<!--                </div>-->
+<!--                <div class="layui-card-body">-->
+<!--                    <div id="assetCata" style="width:100%;height:300px"></div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
+<!--</div>-->
 
 
 <script>
