完善功能,报废流程

--- a/eam/view/view-ops/src/main/resources/public/business/ops/monitor_node_resource/monitor_node_host_list.html
+++ b/eam/view/view-ops/src/main/resources/public/business/ops/monitor_node_resource/monitor_node_host_list.html
@@ -84,7 +84,7 @@
 
 <!-- 表格操作列 -->
 <script type="text/html" id="tableOperationTemplate">
-    <button th:if="${perm.checkAuth('eam_position:view-form')}" class="layui-btn layui-btn-primary layui-btn-xs ops-view-button" lay-event="view" th:text="${lang.translate('查看')}" data-id="{{d.id}}">查看</button>
+    <button class="layui-btn layui-btn-primary layui-btn-xs ops-view-button" lay-event="view" th:text="${lang.translate('最新数据')}" data-id="{{d.id}}">最新数据</button>
 </script>
 
 
