--- a/eam/view/view-ops/src/main/resources/public/business/ops/monitor_node_resource/monitor_node_collect_data_graph.html
+++ b/eam/view/view-ops/src/main/resources/public/business/ops/monitor_node_resource/monitor_node_collect_data_graph.html
@@ -24,6 +24,84 @@
     <link th:if(theme.ico!="null") rel="icon" th:href="theme.ico" type="image/vnd.microsoft.icon">
     <link th:each="css:${theme.css}" rel="stylesheet" th:href="${css}+'?'+${cacheKey}">
     <style>
+        table {
+            border-collapse: collapse;
+            border-spacing: 0;
+        }
+
+        td,th {
+            padding: 0;
+        }
+
+        .pure-table {
+            border-collapse: collapse;
+            border-spacing: 0;
+            empty-cells: show;
+            border: 1px solid #cbcbcb;
+        }
+
+        .pure-table caption {
+            color: #000;
+            font: italic 85%/1 arial,sans-serif;
+            padding: 1em 0;
+            text-align: center;
+        }
+
+        .pure-table td,.pure-table th {
+            border-left: 1px solid #cbcbcb;
+            border-width: 0 0 0 1px;
+            font-size: inherit;
+            margin: 0;
+            overflow: visible;
+            padding: .5em 1em;
+        }
+
+        .pure-table thead {
+            background-color: #e0e0e0;
+            color: #000;
+            text-align: left;
+            vertical-align: bottom;
+        }
+
+        .pure-table td {
+            background-color: transparent;
+        }
+
+        .pure-table-bordered td {
+            border-bottom: 1px solid #cbcbcb;
+        }
+
+        .pure-table-bordered tbody>tr:last-child>td {
+            border-bottom-width: 0;
+        }
+        .card{
+            margin-bottom: 20px;
+            padding-bottom:20px;
+        }
+        .card_table{
+            width:100%;
+            text-align: center;
+            padding-top:20px;
+            margin-top:20px;
+            margin-bottom: 20px;
+            padding-bottom:20px;
+        }
+        .card_table_title{
+            margin: auto;
+            width: 50%;
+            text-align: center;
+            color:black;
+            font-size: 15;
+            font-weight:bold;
+            padding-bottom:20px;
+            padding-top:20px;
+            vertical-align:middle;
+        }
+        .gap{
+            width:100%;
+            height:20px;
+            background-color: #f2f2f2;
+        }
     </style>
 </head>
 
