--- a/eam/view/view-ops/src/main/resources/public/business/ops/monitor_node_resource/monitor_node_host_tree.html
+++ b/eam/view/view-ops/src/main/resources/public/business/ops/monitor_node_resource/monitor_node_host_tree.html
@@ -23,6 +23,7 @@
     <link th:if(theme.ico!="null") rel="shortcut icon" th:href="${theme.ico}" type="image/vnd.microsoft.icon">
     <link th:if(theme.ico!="null") rel="icon" th:href="theme.ico" type="image/vnd.microsoft.icon">
     <link th:each="css:${theme.css}" rel="stylesheet" th:href="${css}+'?'+${cacheKey}">
+    <link rel="stylesheet" href="/assets/libs/zTree/css/zTreeStyle/zTreeStyle.css" type="text/css">
     <style>
         .top-container {
             display: -webkit-flex; /* Safari */
@@ -47,33 +48,39 @@
 
 <div class="top-container">
     <div class="left-tree">
-        <div class="layui-form toolbar" style="padding:6px; border-bottom:1px #e6e6e6 solid; " id="toolbar">
-            <table style="width: 100%"><tr>
-                <td>
-                    <input id="search-input" class="layui-input search-input" type="text" placeholder="请输入关键字" style="width: 100%"/>
-                </td>
+<!--        <div class="layui-form toolbar" style="padding:6px; border-bottom:1px #e6e6e6 solid; " id="toolbar">-->
+<!--            <table style="width: 100%"><tr>-->
+<!--                <td>-->
+<!--                    <input id="search-input" class="layui-input search-input" type="text" placeholder="请输入关键字" style="width: 100%"/>-->
+<!--                </td>-->
 
-            </tr></table>
-        </div>
-        <div id="tree-container" style="overflow:auto;height:800px">
+<!--            </tr></table>-->
+<!--        </div>-->
+        <div id="tree-container" style="overflow:auto;">
             <ul id="menu-tree" class="ztree"></ul>
         </div>
     </div>
     <div class="right-tab" style="margin-left: 8px;margin-right: 8px" >
         <div style="margin-top:6px;">
-            <iframe id="chartList" th:src="'/business/ops/monitor_node_resource/monitor_node_collect_data_graph.html?assetSelectedCode='+${assetSelectedCode}" frameborder=0 width="100%"  height="760px"></iframe>
+            <iframe id="chartList" th:src="'/business/ops/monitor_node_resource/monitor_node_collect_data_graph.html?nodeId=none'" frameborder=0 width="100%" onload="setIframeHeight(this)"   ></iframe>
         </div>
     </div>
 </div>
+<script>
+    function changeFrameHeight(){
+        var ifm= document.getElementById("chartList");
+        ifm.height=document.documentElement.clientHeight-56;
+        console.log("ifm.height",ifm.height)
+    }
 
-<div class="model-form-footer">
-    <button class="layui-btn layui-btn-primary" id="cancel-button" lay-filter="cancel-button" type="button" th:text="${lang.translate('取消')}" >取消</button>
-    <button class="layui-btn" style="margin-right: 15px"  id="submit-button" lay-filter="submit-button" lay-submit th:text="${lang.translate('确定')}">确定</button>
-</div>
-
-
-
-
+    window.onresize=function(){
+        changeFrameHeight();
+    }
+    window.onload = function () {
+        $("#tree-container").height($(document).height()-56);
+        changeFrameHeight();
+    };
+</script>
 
 <script type="text/javascript" src="/module/global.js"></script>
 <script type="text/javascript" src="/assets/libs/jquery-3.2.1.min.js"></script>
