--- a/eam/view/view-ops/src/main/resources/public/business/ops/monitor_tpl_graph/monitor_tpl_graph_form.html
+++ b/eam/view/view-ops/src/main/resources/public/business/ops/monitor_tpl_graph/monitor_tpl_graph_form.html
@@ -2,7 +2,7 @@
 /**
  * 模版图形 列表页 JS 脚本
  * @author 金杰 , maillank@qq.com
- * @since 2022-02-13 20:48:54
+ * @since 2022-02-17 15:12:43
  */
  -->
  <!DOCTYPE html>
@@ -38,7 +38,7 @@
 
 
 
-        <div class="layui-row form-row" id="random-9999-content">
+        <div class="layui-row form-row" id="random-7988-content">
 
              <!--开始：column 循环-->
             <!-- 只有当非第一个分组没有title时才使 padding-top 为 0 -->
@@ -51,12 +51,23 @@
                         </div>
                     </div>
 
-                                    <div class="layui-form-item" >
-                        <div class="layui-form-label layui-form-label-c1"><div th:text="${lang.translate('状态')}">状态</div></div>
-                        <div class="layui-input-block layui-input-block-c1">
-                            <input lay-filter="status" id="status" name="status" th:placeholder="${ lang.translate('请输入') +''+ lang.translate('状态') }" type="text" class="layui-input"  />
-                        </div>
+                
+                <div class="layui-form-item" >
+                    <div class="layui-form-label layui-form-label-c1"><div th:text="${lang.translate('状态')}">状态</div><div class="layui-required">*</div></div>
+                    <div class="layui-input-block layui-input-block-c1">
+                        <input input-type="radio" type="radio" name="status" lay-filter="status" th:each="e,stat:${enum.toArray('com.dt.platform.constants.enums.ops.MonitorEnableEnum')}" th:value="${e.code}" th:title="${e.text}" th:checked="${(e.code=='' || stat.index==0)?'yes':'no'}">
                     </div>
+                </div>
+
+
+                
+                <div class="layui-form-item" >
+                    <div class="layui-form-label layui-form-label-c1"><div th:text="${lang.translate('图形类型')}">图形类型</div><div class="layui-required">*</div></div>
+                    <div class="layui-input-block layui-input-block-c1">
+                        <input input-type="radio" type="radio" name="graphType" lay-filter="graphType" th:each="e,stat:${enum.toArray('com.dt.platform.constants.enums.ops.MonitorTplGraphTypeEnum')}" th:value="${e.code}" th:title="${e.text}" th:checked="${(e.code=='' || stat.index==0)?'yes':'no'}">
+                    </div>
+                </div>
+
 
                 <!--结束：栏次内字段循环-->
             </div>
@@ -148,7 +159,9 @@
 
 <script th:inline="javascript">
     var LAYUI_TABLE_WIDTH_CONFIG = [[${layuiTableWidthConfig}]];
-    var VALIDATE_CONFIG={"name":{"labelInForm":"名称","inputType":"text_input","required":true}};
+    var RADIO_STATUS_DATA = [[${enum.toArray('com.dt.platform.constants.enums.ops.MonitorEnableEnum')}]];
+    var RADIO_GRAPHTYPE_DATA = [[${enum.toArray('com.dt.platform.constants.enums.ops.MonitorTplGraphTypeEnum')}]];
+    var VALIDATE_CONFIG={"graphType":{"labelInForm":"图形类型","inputType":"radio_box","required":true},"name":{"labelInForm":"名称","inputType":"text_input","required":true},"status":{"labelInForm":"状态","inputType":"radio_box","required":true}};
     var AUTH_PREFIX="ops_monitor_tpl_graph";
 
 
