--- a/eam/view/view-ops/src/main/resources/public/business/ops/monitor_tpl_graph/monitor_tpl_graph_list.html
+++ b/eam/view/view-ops/src/main/resources/public/business/ops/monitor_tpl_graph/monitor_tpl_graph_list.html
@@ -2,7 +2,7 @@
 /**
  * 模版图形 列表页 JS 脚本
  * @author 金杰 , maillank@qq.com
- * @since 2022-02-13 20:48:54
+ * @since 2022-02-17 15:12:43
  */
  -->
  <!DOCTYPE html>
@@ -39,7 +39,7 @@
                 <!-- 搜索输入区域 -->
                 <div class="layui-form toolbar search-inputs">
                     <!-- 主键 , id ,typeName=text_input, isHideInSearch=true -->
-                    <!-- 状态 , status ,typeName=text_input, isHideInSearch=true -->
+                    <!-- 状态 , status ,typeName=radio_box, isHideInSearch=true -->
                     <!-- 名称 , name ,typeName=text_input, isHideInSearch=false -->
                     <div class="search-unit">
                         <div class="search-label-div" style="width:70px"><span th:text="${lang.translate('名称')}" class="search-label name-label">名称</span><span class="search-colon">:</span></div>
@@ -48,7 +48,7 @@
                     <!-- 图形模版 , tplCode ,typeName=select_box, isHideInSearch=true -->
                     <!-- 宽度 , graphWidth ,typeName=number_input, isHideInSearch=true -->
                     <!-- 高度 , graphHeight ,typeName=number_input, isHideInSearch=true -->
-                    <!-- 图形类别 , graphType ,typeName=text_input, isHideInSearch=true -->
+                    <!-- 图形类别 , graphType ,typeName=radio_box, isHideInSearch=true -->
                     <!-- 图形设置 , content ,typeName=text_area, isHideInSearch=true -->
                     <!-- 数据来源 , ds ,typeName=text_area, isHideInSearch=true -->
                     <!-- 标签 , label ,typeName=text_input, isHideInSearch=true -->
@@ -106,6 +106,8 @@
 
 <script th:inline="javascript">
     var LAYUI_TABLE_WIDTH_CONFIG = [[${pageHelper.getTableColumnWidthConfig('data-table')}]];
+    var RADIO_STATUS_DATA = [[${enum.toArray('com.dt.platform.constants.enums.ops.MonitorEnableEnum')}]];
+    var RADIO_GRAPHTYPE_DATA = [[${enum.toArray('com.dt.platform.constants.enums.ops.MonitorTplGraphTypeEnum')}]];
     var AUTH_PREFIX="ops_monitor_tpl_graph";
 
 
